Update Finnish/Swedish translations.

--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -134,6 +134,9 @@ Bookmark = "Kirjanmerkki"
 bookplate_label = "%%title%% - Kirjanomistajan merkki"
 Books = "Kirjat"
 Borrowing Location = "Lainauspaikka"
+bound_with_heading_multiple_callnumbers = "Sisältö: [%%callnumber%%]"
+bound_with_heading_one_callnumber = "Sisältö"
+bound_with_intro = "Seuraavat teokset ovat yhteensidottuja ylläolevan kanssa."
 Braille = "Braille"
 Breadcrumbs = "Murupolku"
 Brief View = "Lyhyet tiedot"
@@ -158,6 +161,7 @@ bulk_error_missing = "Puuttuvat tiedot. Pyyntö epäonnistui."
 bulk_export = "Vie valitut"
 bulk_export_not_supported = "Valitsemasi tietueet eivät tue massavientiä."
 bulk_fail = "Tapahtui virhe. Yritä uudestaan."
+bulk_limit_exceeded = "Valittujen määrä %%count%% ylittää enimmäismäärän %%limit%% tälle toiminnolle."
 bulk_noitems_advice = "Ei valittuja tietueita. Rastita tietueen viereinen laatikko."
 bulk_print = "Tulosta valitut"
 bulk_save = "Tallenna valitut"
@@ -270,6 +274,8 @@ confirm_renew_selected_text = "Haluatko uusia valitsemasi lainat?"
 confirm_storage_retrieval_request_cancel_all_text = "Haluatko perua kaikki tilaukset?"
 confirm_storage_retrieval_request_cancel_selected_text = "Haluatko perua valitsemasi tilaukset?"
 Connecting of library cards is not supported = "Kirjastokorttien yhdistämistä ei tueta"
+consortial_vufind_recommend_heading = "Lainaa kumppanikirjastosta"
+consortial_vufind_recommend_intro_html = '<a href="%%url%%" target="_blank">%%result_count%% tulos(ta)</a> löytynyt kumppanikirjastoista.'
 Contents = "Sisältö"
 Contributing Source = "Osallistuva lähde"
 Contributors = "Muut tekijät"
@@ -297,6 +303,9 @@ Created = "Luotu"
 csrf_validation_failed = "Pyyntöä ei voitu käsitellä. Yritä uudestaan."
 Data Set = "Datasetti"
 Database = "Tietokanta"
+databases_recommend_heading = "Tietokannat"
+databases_recommend_intro = "Hae suoraan sisältyvistä tietokannoista lisätoimintoja varten."
+databases_recommend_link_to_all = "Lista kaikista tietokannoista"
 Date = "Päiväys"
 Date of birth = "Syntymäaika"
 Date of death = "Kuolinaika"
@@ -398,12 +407,29 @@ epf_recommendations = "Julkaisusuosituksia"
 epf_recommendations_more = "Lisää julkaisusuosituksia"
 ePub Full Text = "ePub-kokoteksti"
 Era = "Aikakausi"
+error_creating_marc_xml = "MARC-tietueen muotoilussa tapahtui virhe"
 error_inconsistent_parameters = "Tapahtui virhe. Parametrit ovat ristiriitaiset."
 error_page_parameter_list_heading = "Pyynnön parametrit"
 Exception = "Poikkeus"
 Excerpt = "Katkelmat"
 exclude_facet = "[jätä pois]"
 exclude_newspapers = "Jätä pois sanomalehtiartikkelit"
+explain_boost = " * %%boost%% (boostaus)"
+explain_boost_description = "(boostaus) = %%boost_description%%"
+explain_compared = "Relevanssi verrattuna huipputuloksen relevanssiin"
+explain_coord = " * %%coord%% (säätö osumien lukumäärään suhteessa hakuun)"
+explain_difference_score = "Ero huippupisteisiin"
+explain_disabled = "Relevanssin kuvaus ei ole käytössä lähteelle %%searchClassId%%"
+explain_for_search = "Haun relevanssin kuvaus"
+explain_modified_value = "Tulos: %%relevanceValue%% (relevanssiarvo)"
+explain_modifier = "muokkaajalla %%modifier%%"
+explain_record_score = "Tietueen pisteet"
+explain_relevance = "Tietue %%recordId%% löytyi relevanssipisteillä %%relevanceValue%%"
+explain_relevance_score = "Relevanssipisteet"
+explain_result_list_chart_title = "Pisteet: %%score%%"
+explain_result_list_hint = "Relevanssipisteet. Napsauta nähdäksesi yksityiskohtaisen selityksen."
+explain_sum = "summa"
+explain_top_relevance = "Parhaan tuloksen osuvuus"
 Export = "Vienti"
 Export Favorites = "Vie suosikit"
 Export Items = "Vie tietueet"
@@ -505,6 +531,8 @@ footer_header_find_more = "Hae lisää"
 footer_header_need_help = "Tarvitsetko apua?"
 footer_header_search_options = "Haun vaihtoehdot"
 for search = "osumasta haulle"
+Forget All = "Unohda kaikki"
+Forget Login = "Unohda kirjautuminen"
 Forgot Password = "Salasana unohtunut"
 Form name = "Lomakkeen nimi"
 Format = "Aineistotyyppi"
@@ -709,6 +737,7 @@ Kit = "Kokoelma"
 Language = "Kieli"
 large = "Suuri"
 Last = "Viimeinen"
+Last Login = "Viimeisin kirjautuminen"
 Last Modified = "Viimeksi muokattu"
 Last Name = "Sukunimi"
 Last Search Result = "Viimeinen hakutulos"
@@ -769,6 +798,8 @@ Login = "Kirjaudu sisään"
 Login for full access = "Kirjaudu sisään päästäksesi kaikkeen aineistoon."
 login_disabled = "Sisäänkirjautuminen ei ole käytössä."
 login_target = "Kirjasto"
+login_warning_email_message = "%%title%%: Epäilyttävä kirjautuminen on havaittu tililläsi. Kaikki tallennetut kirjautumiset on mitätöity, ja sinun on kirjauduttava uudelleen sisään. Suosittelemme salasanan vaihtamista ja tilisi toiminnan tarkistamista, jotta varmistut, ettei tililläsi ole tuntemattomia toimia."
+login_warning_email_subject = "Varoitus: Epäilyttävä kirjautuminen havaittu"
 Logout = "Kirjaudu ulos"
 Main Author = "Päätekijä"
 Main Authors = "Päätekijät"
@@ -803,6 +834,7 @@ more_authors_abbrev = "et al."
 more_ellipsis = "lisää…"
 more_info_toggle = "Näytä/piilota lisätiedot."
 more_options_ellipsis = "Lisää vaihtoehtoja…"
+more_results_ellipsis = "Lisää tuloksia..."
 more_topics = "%%count%% aihetta lisää"
 Most Recent Received Issues = "Uusimmat saapuneet numerot"
 Multiple Call Numbers = "Useita sijainteja"
@@ -839,6 +871,7 @@ No new item information is currently available. = "Uutuusluettelo ei ole saatavi
 No pickup locations available = "Ei noutopaikkoja saatavilla"
 No Preference = "Mikä tahansa"
 No reviews were found for this record = "Ei arvosteluja tälle tietueelle"
+No saved logins = "Ei tallennettuja kirjautumisia"
 No Tags = "Ei tageja"
 no_description = "Kuvausta ei saatavissa."
 no_email_address = "Sähköpostiosoite puuttuu."
@@ -1123,6 +1156,8 @@ relais_success_message = "Pyyntö tehty tunnuksella #%%id%%. Saat vahvistuksen s
 Related Author = "Liittyvä tekijä"
 Related Items = "Liittyvät tietueet"
 Related Subjects = "Liittyvät aiheet"
+Relevance = "Relevanssi"
+remember_me = "Muista kirjautumiseni %%days%% päivää"
 Remove filter = "Poista suodatin"
 Remove Filters = "Poista rajaukset"
 Remove from Book Bag = "Poista kirjakorista"
@@ -1167,6 +1202,9 @@ Save Comment = "Tallenna kommentti"
 save_search = "Tallenna haku"
 save_search_remove = "Poista tallennettu haku"
 Saved in = "Tallennettuna"
+Saved Logins = "Tallennetut kirjautumiset"
+saved_login_actions = "Toiminnot"
+saved_login_platform_and_browser = "Käyttöjärjestelmä / Selain"
 schedule_daily = "Päivittäin"
 schedule_explanation = "Vastaanota sähköposti-ilmoituksia uusista hakutuloksista."
 schedule_none = "Ei mitään"
@@ -1327,6 +1365,7 @@ switchquery_truncatechar = "Lyhennä hakua saadaksesi lisää tuloksia"
 switchquery_unwantedbools = "Sanat AND, OR ja NOT voivat sotkea hakua; kokeile lisätä lainausmerkit hakusanojen ympärille"
 switchquery_unwantedquotes = "Voit saada enemmän tuloksia poistamalla lainausmerkit"
 switchquery_wildcard = "Jokerimerkkejä käyttämällä voit löytää erilaisia sanamuotoja"
+Synonym = "Synonyymi"
 System Unavailable = "Järjestelmä ei ole saatavissa"
 Table of Contents = "Sisällysluettelo"
 Table of Contents unavailable = "Sisällysluettelo ei ole saatavissa"
