Koha: Check and display a status if item will be automatically renewed
- Implemented community feedback to use the ILSMessages/en.ini for the
  new will_auto_renew message

--- a/languages/ILSMessages/en.ini
+++ b/languages/ILSMessages/en.ini
@@ -18,3 +18,4 @@ no_write_items_scope = "You are not allowed to write items."
 renewal_block = "You cannot renew checkouts"
 requests_blocked = "You cannot place a request on library material"
 storage_wrong_user_institution = "You cannot place storage retrieval requests for material from the requested library."
+will_auto_renew = "Item will automatically renew"
