translation improvements and a couple formatting fixes

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -998,22 +998,19 @@ od_mag_issue_ischeckedout = "checked out"
 od_magazine-overdrive = "Digital Magazine"
 od_mycontent_help = 'For information about and help with downloading these titles, see <a href="%%url%%">OverDrive Help</a>.'
 od_none_found = "No titles found."
-od_people = "People"
-od_person = "Person"
 od_resource_page = "OverDrive Resource Page"
 od_return_confirm = "Are you sure you want to return this title?"
 od_return_failure = "This title could not be returned."
 od_return_success = "This title has been returned."
 od_susp_after = "Deliver after %%days%% days"
 od_susp_asap = "Deliver as soon as possible"
-od_susp_deliver = "Deliver"
 od_susp_hold = "Suspend hold"
 od_susp_hold_confirm = "How long would you like to suspend this hold?"
 od_susp_hold_edit = "Edit delivery date"
 od_susp_ind = "Suspend indefinitely"
 od_unlimited = "Unlimited"
 od_video-streaming = "Streaming video file"
-od_waiting = "waiting"
+od_waiting = "{holds, plural, =1 {1 person} other {# people}} waiting"
 of_num_results = "#%%position%% of %%total%% results"
 old_password = "Old Password"
 On Reserve = "On Reserve"
