--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -798,8 +798,6 @@ Login = "Kirjaudu sisään"
 Login for full access = "Kirjaudu sisään päästäksesi kaikkeen aineistoon."
 login_disabled = "Sisäänkirjautuminen ei ole käytössä."
 login_target = "Kirjasto"
-login_warning_email_message = "%%title%%: Epäilyttävä kirjautuminen on havaittu tililläsi. Kaikki tallennetut kirjautumiset on mitätöity, ja sinun on kirjauduttava uudelleen sisään. Suosittelemme salasanan vaihtamista ja tilisi toiminnan tarkistamista, jotta varmistut, ettei tililläsi ole tuntemattomia toimia."
-login_warning_email_subject = "Varoitus: Epäilyttävä kirjautuminen havaittu"
 Logout = "Kirjaudu ulos"
 Main Author = "Päätekijä"
 Main Authors = "Päätekijät"
@@ -1041,6 +1039,8 @@ peer_reviewed_limit = "Rajaa artikkeleihin vertaisarvioiduista lehdistä"
 permanent_link = "Pysyvä linkki"
 permission_denied = "Sinulla ei ole tarvittavia käyttöoikeuksia pyydetyn sivun tai toiminnon käyttämiseksi."
 permission_denied_title = "Pääsy estetty"
+persistent_login_warning_email_message = "Tililläsi on havaittu virheellinen tallennettu kirjautuminen. Kaikki tallennetut kirjautumiset on mitätöity, ja sinun on kirjauduttava uudelleen sisään. Suosittelemme tilisi toiminnan tarkistamista, jotta voit varmistua, ettei tililläsi ole tuntemattomia toimia."
+persistent_login_warning_email_subject = "%%title%%: Virheellinen kirjautumisyritys havaittu"
 Phone Number = "Puhelin"
 Photo = "Valokuva"
 Physical Description = "Ulkoasu"
