--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1040,7 +1040,7 @@ peer_reviewed_limit = "Limit to articles from peer-reviewed journals"
 permanent_link = "Permanent link"
 permission_denied = "You have requested a page or action, but you do not have the necessary permission."
 permission_denied_title = "Permission denied"
-persistent_login_warning_email_message = "An invalid saved login has been detected on your account. All your saved logins have been invalidated and you will be required to log in again. It is recommended that you review your account activity to make sure there are no unfamiliar actions."
+persistent_login_warning_email_message = "Unusual activity related to your account was detected. To protect your security, all of your saved logins have been invalidated, and you will be required to log in again. If this notification was not triggered by you returning to the service, it is recommended that you review your account activity to make sure there are no unfamiliar actions."
 persistent_login_warning_email_subject = "%%title%%: Invalid login attempt detected"
 Phone Number = "Phone Number"
 Photo = "Photo"
