--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -1039,7 +1039,7 @@ peer_reviewed_limit = "Rajaa artikkeleihin vertaisarvioiduista lehdistä"
 permanent_link = "Pysyvä linkki"
 permission_denied = "Sinulla ei ole tarvittavia käyttöoikeuksia pyydetyn sivun tai toiminnon käyttämiseksi."
 permission_denied_title = "Pääsy estetty"
-persistent_login_warning_email_message = "Tililläsi on havaittu virheellinen tallennettu kirjautuminen. Kaikki tallennetut kirjautumiset on mitätöity, ja sinun on kirjauduttava uudelleen sisään. Suosittelemme tilisi toiminnan tarkistamista, jotta voit varmistua, ettei tililläsi ole tuntemattomia toimia."
+persistent_login_warning_email_message = "Tiliisi liittyen on havaittu epätavallista toimintaa. Turvallisuutesi vuoksi kaikki tallennetut kirjautumiset on mitätöity, ja sinun on kirjauduttava uudelleen sisään. Jos tämä ilmoitus ei ollut seurausta siitä, että palasit itse palveluun, suosittelemme tilisi toiminnan tarkistamista, jotta voit varmistua, ettei tililläsi ole tuntemattomia toimia."
 persistent_login_warning_email_subject = "%%title%%: Virheellinen kirjautumisyritys havaittu"
 Phone Number = "Puhelin"
 Photo = "Valokuva"
