--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -1039,7 +1039,7 @@ peer_reviewed_limit = "Begränsa till artiklar i referentgranskade tidskrifter"
 permanent_link = "Permanent länk"
 permission_denied = "Du har begärt en sida eller åtgärd, men du inte har nödvändiga tillstånd."
 permission_denied_title = "Åtkomst nekad"
-persistent_login_warning_email_message = "Ogiltig sparad inloggning har upptäckts på ditt konto. Alla dina sparade inloggningar har ogiltigförklarats och du kommer att behöva logga in igen. Det rekommenderas att du granskar ditt kontos aktivitet för att säkerställa att det inte finns några ovanliga åtgärder."
+persistent_login_warning_email_message = "Ovanlig aktivitet relaterad till ditt konto upptäcktes. För att skydda din säkerhet har alla dina sparade inloggningar ogiltigförklarats, och du kommer att behöva logga in igen. Om detta meddelande inte var baserat på att du återvände till tjänsten, rekommenderas det att du granskar ditt kontos aktivitet för att säkerställa att det inte finns några ovanliga åtgärder."
 persistent_login_warning_email_subject = "%%title%%: Ogiltig inloggningsförsök upptäckt"
 Phone Number = "Telefonnummer"
 Photo = "Fotografi"
