Defer login token update to end of request and tweaks emails. (#3444)
It was possible for the processing of the request to fail after the login token was updated, so the new token was never communicated to user's browser. This change defers the token update until other processing is complete. It also softens the email messages a bit since there's always a potential for technical issues instead of an attack, and a detected issue means the login was not successful.
Also the suggestion to change password has been removed since it does nothing if cookies get stolen, and is not a useful suggestion with email authentication.
A configuration option to disable emails has been added so that they can be easily disabled if it seems that they cause too much trouble.

--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -798,8 +798,6 @@ Login = "Kirjaudu sisään"
 Login for full access = "Kirjaudu sisään päästäksesi kaikkeen aineistoon."
 login_disabled = "Sisäänkirjautuminen ei ole käytössä."
 login_target = "Kirjasto"
-login_warning_email_message = "%%title%%: Epäilyttävä kirjautuminen on havaittu tililläsi. Kaikki tallennetut kirjautumiset on mitätöity, ja sinun on kirjauduttava uudelleen sisään. Suosittelemme salasanan vaihtamista ja tilisi toiminnan tarkistamista, jotta varmistut, ettei tililläsi ole tuntemattomia toimia."
-login_warning_email_subject = "Varoitus: Epäilyttävä kirjautuminen havaittu"
 Logout = "Kirjaudu ulos"
 Main Author = "Päätekijä"
 Main Authors = "Päätekijät"
@@ -1041,6 +1039,8 @@ peer_reviewed_limit = "Rajaa artikkeleihin vertaisarvioiduista lehdistä"
 permanent_link = "Pysyvä linkki"
 permission_denied = "Sinulla ei ole tarvittavia käyttöoikeuksia pyydetyn sivun tai toiminnon käyttämiseksi."
 permission_denied_title = "Pääsy estetty"
+persistent_login_warning_email_message = "Tiliisi liittyen on havaittu epätavallista toimintaa. Turvallisuutesi vuoksi kaikki tallennetut kirjautumiset on mitätöity, ja sinun on kirjauduttava uudelleen sisään. Jos tämä ilmoitus ei ollut seurausta siitä, että palasit itse palveluun, suosittelemme tilisi toiminnan tarkistamista, jotta voit varmistua, ettei tililläsi ole tuntemattomia toimia."
+persistent_login_warning_email_subject = "%%title%%: Virheellinen kirjautumisyritys havaittu"
 Phone Number = "Puhelin"
 Photo = "Valokuva"
 Physical Description = "Ulkoasu"
