--- a/languages/en.ini
+++ b/languages/en.ini
@@ -237,6 +237,7 @@ Cite this = "Cite this"
 City = "City"
 Clear = "Clear"
 clear_feedback_filter = "Clear Filter"
+clear_selection = "Clear Selection"
 clear_tag_filter = "Clear Filter"
 close = "close"
 Code = "Code"
