--- a/languages/de.ini
+++ b/languages/de.ini
@@ -234,7 +234,7 @@ Cite this = "Zitieren"
 City = "Stadt"
 Clear = "Felder leeren"
 clear_feedback_filter = "Filter aufheben"
-clear_selection = "Auswahl aufheben"
+clear_selection = "Auswahl aufheben (%%count%%)"
 clear_tag_filter = "Filter aufheben"
 close = "schließen"
 Code = "Fehlercode"
