Multi page selection in favorite list (#3142)

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -237,6 +237,7 @@ Cite this = "Cite this"
 City = "City"
 Clear = "Clear"
 clear_feedback_filter = "Clear Filter"
+clear_selection = "Clear Selection (%%count%%)"
 clear_tag_filter = "Clear Filter"
 close = "close"
 Code = "Code"
@@ -1241,6 +1242,7 @@ See also = "See also"
 see_all_ellipsis = "see all…"
 Select this record = "Select this record"
 Select your carrier = "Select your carrier"
+select_all = "Select all entries"
 select_all_on_page = "Select all entries on the page"
 select_item = "Select item for further action"
 select_item_checked_out_renew = "Select item for renewing"
