Add a couple of Finnish and Swedish translations.

--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -236,6 +236,7 @@ Cite this = "Sitaatti"
 City = "Kaupunki"
 Clear = "Tyhjennä"
 clear_feedback_filter = "Poista suodatin"
+clear_selection = "Tyhjennä valinta (%%count%%)"
 clear_tag_filter = "Poista suodatin"
 close = "sulje"
 Code = "Koodi"
@@ -1248,6 +1249,7 @@ See also = "Katso myös"
 see_all_ellipsis = "näytä kaikki…"
 Select this record = "Valitse tämä tietue"
 Select your carrier = "Valitse operaattori"
+select_all = "Valitse kaikki"
 select_all_on_page = "Valitse sivu"
 select_item = "Valitse rivi jatkotoimenpiteitä varten"
 select_item_checked_out_renew = "Valitse laina uusittavaksi"
