--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -236,6 +236,7 @@ Cite this = "Hänvisa"
 City = "Stad"
 Clear = "Tömma"
 clear_feedback_filter = "Ta bort filter"
+clear_selection = "Rensa val (%%count%%)"
 clear_tag_filter = "Ta bort filter"
 close = "Stäng"
 Code = "Kod"
@@ -1248,6 +1249,7 @@ See also = "Se också"
 see_all_ellipsis = "Visa alla…"
 Select this record = "Välj denna post"
 Select your carrier = "Välj operatör"
+select_all = "Välj alla poster"
 select_all_on_page = "Välj alla poster på sidan"
 select_item = "Välj rad för ytterligare åtgärder"
 select_item_checked_out_renew = "Välj lån för förnyelse"
