Clarify language and menu interface for saved items.

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -64,6 +64,7 @@ All = "All"
 All Fields = "All Fields"
 All Pages Loaded = "All Pages Loaded"
 All Text = "All Text"
+all_saved_items = "All Saved Items"
 alphabrowse_matches = "Results"
 alphabrowselink_html = 'Browse entries by %%index%% starting from <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Always ask me"
@@ -318,6 +319,7 @@ date_to = "To"
 date_year_placeholder = "Y"
 Debug Information = "Debug Information"
 deep_paging_failure = "The search results page you requested is not currently available; you have been redirected to page %%page%%."
+default_list_title = "Saved Items"
 del_search = "Remove Search Group"
 del_search_num = "Remove Search Group %%num%%"
 Delete = "Delete"
@@ -488,7 +490,6 @@ fav_export = "Export Saved Items"
 fav_list_delete = "List has been deleted."
 fav_list_delete_cancel = "This list was not deleted."
 fav_list_delete_fail = "Sorry, an error has occurred. Your list was not deleted."
-Favorites = "Saved Items"
 Fee = "Fee"
 Feedback = "Feedback"
 Feedback Management = "Feedback Management"
@@ -840,7 +841,6 @@ Most Recent Received Issues = "Most Recent Received Issues"
 Multiple Call Numbers = "Multiple Call Numbers"
 Multiple Locations = "Multiple Locations"
 Musical Score = "Musical Score"
-My Favorites = "Saved Items"
 My Fines = "Fines"
 My Holds = "Holds"
 My Profile = "Profile"
@@ -1507,7 +1507,6 @@ Your Account = "Your Account"
 Your book bag is empty = "Your book bag is empty"
 Your Checked Out Items = "Your Checked Out Items"
 Your Comment = "Your Comment"
-Your Favorites = "Saved Items"
 Your Fines = "Your Fines"
 Your Holds and Recalls = "Your Holds and Recalls"
 Your Lists = "Your Lists"
