--- a/languages/da.ini
+++ b/languages/da.ini
@@ -182,6 +182,7 @@ date_month_placeholder = "M"
 date_to = "Til"
 date_year_placeholder = "Å"
 Debug Information = "Debug Information"
+default_list_title = "Mine favoritter"
 del_search = "Fjern søgegruppe"
 Delete = "Slet"
 delete_list = "Slet liste"
@@ -248,7 +249,6 @@ fav_export = "Eksportér favoritter"
 fav_list_delete = "Din favoritliste blev slettet."
 fav_list_delete_cancel = "Denne liste blev ikke slettet."
 fav_list_delete_fail = "Vi beklager. Der er sket en fejl. Den liste blev ikke slettet."
-Favorites = "Favoritter"
 Fee = "Betaling"
 feedback_email = "Email"
 feedback_help_label = "Har du brug for hjælp?"
@@ -409,7 +409,6 @@ Most Recent Received Issues = "Senest modtagede eksemplarer"
 Multiple Call Numbers = "Flere klassifikationsnumre"
 Multiple Locations = "Flere lokationer"
 Musical Score = "Musical Score"
-My Favorites = "Mine favoritter"
 My Fines = "Mine bøder"
 My Holds = "Mine beholdninger"
 My Profile = "Min profil"
@@ -675,7 +674,6 @@ Your Account = "Din konto"
 Your book bag is empty = "Din bogkurv er tom"
 Your Checked Out Items = "Dine udlån"
 Your Comment = "Din kommentar"
-Your Favorites = "Dine favoritter"
 Your Fines = "Dine bøder"
 Your Holds and Recalls = "Dine lån og hjemkaldelser"
 Your Lists = "Dine lister"
