--- a/languages/de.ini
+++ b/languages/de.ini
@@ -310,6 +310,7 @@ date_to = "Bis"
 date_year_placeholder = "J"
 Debug Information = "Debug Information"
 deep_paging_failure = "Die von Ihnen angeforderte Seite mit den Suchergebnissen ist derzeit nicht verfügbar; Sie wurden zu Seite %%page%% weitergeleitet."
+default_list_title = "Meine Favoriten"
 del_search = "Suchgruppe entfernen"
 del_search_num = "Suchgruppe %%num%% aufheben"
 Delete = "Löschen"
@@ -479,7 +480,6 @@ fav_export = "Favoriten exportieren"
 fav_list_delete = "Ihre Favoritenliste wurde gelöscht."
 fav_list_delete_cancel = "Die Liste wurde nicht gelöscht."
 fav_list_delete_fail = "Leider ist ein Fehler aufgetreten. Ihre Liste wurde nicht gelöscht."
-Favorites = "Favoriten"
 Fee = "Gebühr"
 Feedback = "Feedback"
 Feedback Management = "Verwaltung von Rückmeldungen"
@@ -827,7 +827,6 @@ Most Recent Received Issues = "Die neusten Ausgaben"
 Multiple Call Numbers = "Mehrere Klassifikationsnummern"
 Multiple Locations = "Mehrere Standorte"
 Musical Score = "Partitur"
-My Favorites = "Meine Favoriten"
 My Fines = "Meine Gebühren"
 My Holds = "Meine Bestellungen"
 My Profile = "Persönliche Angaben"
@@ -1479,7 +1478,6 @@ Your Account = "Ihr Konto"
 Your book bag is empty = "Ihre Zwischenablage ist leer"
 Your Checked Out Items = "Ihre ausgeliehenen Exemplare"
 Your Comment = "Ihr Kommentar"
-Your Favorites = "Ihre Favoriten"
 Your Fines = "Ihre Gebühren"
 Your Holds and Recalls = "Ihre offenen Bestellungen und Vormerkungen"
 Your Lists = "Ihre Listen"
