--- a/languages/eu.ini
+++ b/languages/eu.ini
@@ -884,6 +884,7 @@ date_month_placeholder = "M"
 date_to = "a"
 date_year_placeholder = "A"
 Debug Information = "Arazketa-informazioa"
+default_list_title = "Nire gogokoenak"
 del_search = "Ezabatu"
 Delete = "Ezabatu"
 delete_account_confirm = "Seguru zaude zure kontua ezabatu nahi duzula?"
@@ -1003,7 +1004,6 @@ fav_export = "Gogokoenak esportatu"
 fav_list_delete = "Zure gogoen zerrenda ezabatu da."
 fav_list_delete_cancel = "Zerrenda hori ez da ezabatu."
 fav_list_delete_fail = "Errorea gertatu da. Ez dugu zure zerrenda ezabatu."
-Favorites = "Gogokoenak"
 Fee = "Kuota"
 Feedback = "Feedback"
 feedback_email = "Posta elektronikoa"
@@ -1281,7 +1281,6 @@ Most Recent Received Issues = "Oharra"
 Multiple Call Numbers = "Klasifikazio zenbaki bat baino gehiago"
 Multiple Locations = "Ale bat baino gehiago"
 Musical Score = "Partitura"
-My Favorites = "Nire gogokoenak"
 My Fines = "Nire penalizazioak"
 My Holds = "Nire erreserbak"
 My Profile = "Nire profila"
@@ -1761,7 +1760,6 @@ Your Account = "Zure kontua"
 Your book bag is empty = "Zure liburu-poltsa hutsik dago"
 Your Checked Out Items = "Zure maileguak"
 Your Comment = "Zure iruzkina"
-Your Favorites = "Zure gogokoenak"
 Your Fines = "Zure zigorrak"
 Your Holds and Recalls = "Zure erreserbak"
 Your Lists = "Zure zerrendak"
