--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -317,6 +317,7 @@ date_to = "Päättyen"
 date_year_placeholder = "V"
 Debug Information = "Virheraportti"
 deep_paging_failure = "Pyytämäsi hakutulossivu ei ole saatavilla. Sinut ohjattiin sivulle %%page%%."
+default_list_title = "Suosikit"
 del_search = "Poista hakuryhmä"
 del_search_num = "Poista hakuryhmä %%num%%"
 Delete = "Poista"
@@ -487,7 +488,6 @@ fav_export = "Vie suosikit"
 fav_list_delete = "Suosikkilista poistettu."
 fav_list_delete_cancel = "Listaa ei poistettu."
 fav_list_delete_fail = "Tapahtui virhe. Listaa ei poistettu."
-Favorites = "Suosikit"
 Fee = "Maksu"
 Feedback = "Palaute"
 Feedback Management = "Palautteiden hallinta"
@@ -839,7 +839,6 @@ Most Recent Received Issues = "Uusimmat saapuneet numerot"
 Multiple Call Numbers = "Useita sijainteja"
 Multiple Locations = "Useita sijainteja"
 Musical Score = "Nuottijulkaisu"
-My Favorites = "Suosikit"
 My Fines = "Maksut"
 My Holds = "Varaukset"
 My Profile = "Omat tiedot"
@@ -1506,7 +1505,6 @@ Your Account = "Oma tili"
 Your book bag is empty = "Kirjakori on tyhjä"
 Your Checked Out Items = "Lainat"
 Your Comment = "Kommentit"
-Your Favorites = "Suosikit"
 Your Fines = "Maksut"
 Your Holds and Recalls = "Varaukset"
 Your Lists = "Listat"
