--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -308,6 +308,7 @@ date_to = "À"
 date_year_placeholder = "A"
 Debug Information = "Debug informations"
 deep_paging_failure = "La page de résultats que vous avez demandée n'est pas disponible pour le moment ; une redirection a été faite vers la page %%page%%."
+default_list_title = "Mes favoris"
 del_search = "Effacer un groupe de recherche"
 del_search_num = "Effacer le groupe de recherche %%num%%"
 Delete = "Supprimer"
@@ -461,7 +462,6 @@ fav_export = "Exporter les favoris"
 fav_list_delete = "Votre liste de favoris a été supprimée."
 fav_list_delete_cancel = "La liste n'a pas été supprimée."
 fav_list_delete_fail = "Hélas une erreur est survenue. Votre liste n'a pas été supprimée."
-Favorites = "Favoris"
 Fee = "Frais"
 Feedback = "Remarques"
 Feedback Management = "Gestion des remarques"
@@ -809,7 +809,6 @@ Most Recent Received Issues = "Les éditions les plus récentes"
 Multiple Call Numbers = "Cotes multiples"
 Multiple Locations = "Localisations multiples"
 Musical Score = "Partition"
-My Favorites = "Mes favoris"
 My Fines = "Mes amendes"
 My Holds = "Mes réservations"
 My Profile = "Mon profil"
@@ -1458,7 +1457,6 @@ Your Account = "Votre compte"
 Your book bag is empty = "Votre panier est vide"
 Your Checked Out Items = "Vos emprunts"
 Your Comment = "Votre commentaire"
-Your Favorites = "Vos favoris"
 Your Fines = "Vos amendes"
 Your Holds and Recalls = "Vos réservations et rappels"
 Your Lists = "Vos listes"
