--- a/languages/gl.ini
+++ b/languages/gl.ini
@@ -238,6 +238,7 @@ date_month_placeholder = "M"
 date_to = "a"
 date_year_placeholder = "A"
 Debug Information = "Información Depurada"
+default_list_title = "Os meus Favoritos"
 del_search = "Borrar Grupo de Procura"
 Delete = "Borrar"
 delete_all = "Borrar Todo"
@@ -340,7 +341,6 @@ fav_export = "Exportar favoritos"
 fav_list_delete = "A súa lista favorita foi borrada"
 fav_list_delete_cancel = "Esta lista non foi borrada"
 fav_list_delete_fail = "Sentímolo, ocorreu un erro . A súa lista non foi borrada"
-Favorites = "Favoritos"
 Fee = "Cota"
 Feedback = "Comentarios"
 feedback_email = "Correo Electrónico"
@@ -596,7 +596,6 @@ Most Recent Received Issues = "Números máis recentes recibidos"
 Multiple Call Numbers = "Múltiples Números de Clasificación"
 Multiple Locations = "Múltiples Localizacións"
 Musical Score = "Partituras"
-My Favorites = "Os meus Favoritos"
 My Fines = "As miñas Multas"
 My Holds = "As miñas Reservas"
 My Profile = "O meu Perfil"
