--- a/languages/hr.ini
+++ b/languages/hr.ini
@@ -309,6 +309,7 @@ date_to = "Do"
 date_year_placeholder = "G"
 Debug Information = "Informacije o ispravljanju grešaka"
 deep_paging_failure = "Zatražena stranica rezultata pretrage trenutačno nije dostupna; preusmjeren/a si na stranicu %%page%%."
+default_list_title = "Favoriti"
 del_search = "Ukloni pretragu grupa"
 del_search_num = "Ukloni grupu pretrage %%num%%"
 Delete = "Izbriši"
@@ -462,7 +463,6 @@ fav_export = "Izvezi favorite"
 fav_list_delete = "Popis je izbrisan."
 fav_list_delete_cancel = "Ovaj popis nije izbrisan."
 fav_list_delete_fail = "Oprosti, došlo je do greške. Tvoj popis nije izbrisan."
-Favorites = "Favoriti"
 Fee = "Pristojba"
 Feedback = "Povratna informacija"
 Feedback Management = "Upravljanje povratnim informacijama"
@@ -810,7 +810,6 @@ Most Recent Received Issues = "Najnovija dostavljena izdanja"
 Multiple Call Numbers = "Višestruke signature"
 Multiple Locations = "Višestruke  lokacije"
 Musical Score = "Muzički pogodak"
-My Favorites = "Favoriti"
 My Fines = "Zakasnine"
 My Holds = "Narudžbe"
 My Profile = "Profil"
@@ -1459,7 +1458,6 @@ Your Account = "Tvoj račun"
 Your book bag is empty = "Tvoja je košarica prazna"
 Your Checked Out Items = "Tvoji posuđeni predmeti"
 Your Comment = "Tvoj komentar"
-Your Favorites = "Tvoji favoriti"
 Your Fines = "Tvoje zakasnine"
 Your Holds and Recalls = "Tvoje narudžbe ili rezervacije"
 Your Lists = "Tvoj popis"
