--- a/languages/se.ini
+++ b/languages/se.ini
@@ -288,6 +288,7 @@ date_to = "Rádjái"
 date_year_placeholder = "J"
 Debug Information = "Meattáhusraporta"
 deep_paging_failure = "Du bivdin ohcanboađussiidu ii leat oažžunsajis. Don oahpistuvvojit siidui %%page%%."
+default_list_title = "Oiddohat"
 del_search = "Sihko ohcanjoavkku"
 Delete = "Sihko"
 delete_account_confirm = "Háliidatgo sihkkarit sihkkut iežat konttu?"
@@ -418,7 +419,6 @@ fav_export = "Doalvvo oiddohiid"
 fav_list_delete = "Oiddotlisttu sihkkojuvvon."
 fav_list_delete_cancel = "Listu ii sihkkojuvvon."
 fav_list_delete_fail = "Dáhpáhuvai meattáhus. Listu ii sihkkojuvvon."
-Favorites = "Oiddohat"
 Fee = "Máksu"
 Feedback = "Máhcahat"
 feedback_email = "Šleađgaboasta"
@@ -727,7 +727,6 @@ Most Recent Received Issues = "Ođđaseamos boahtán nummárat"
 Multiple Call Numbers = "Máŋga sajádaga"
 Multiple Locations = "Máŋga sajádaga"
 Musical Score = "Nuohttapublikašuvdna"
-My Favorites = "Oiddohat"
 My Fines = "Mávssut"
 My Holds = "Várremat"
 My Profile = "Iežan dieđut"
@@ -1310,7 +1309,6 @@ Your Account = "Iežas kontu"
 Your book bag is empty = "Gore lea guorus"
 Your Checked Out Items = "Luoikkaheamit"
 Your Comment = "Kommeanttat"
-Your Favorites = "Oiddohat"
 Your Fines = "Mávssut"
 Your Holds and Recalls = "Várremat"
 Your Lists = "Listtut"
