--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -317,6 +317,7 @@ date_to = "Till"
 date_year_placeholder = "Å"
 Debug Information = "Felrapport"
 deep_paging_failure = "Resultatsidan du begärde är för närvarande inte tillgänglig. Du har omdirigerats till sidan %%page%%."
+default_list_title = "Favoriter"
 del_search = "Radera sökgruppen"
 del_search_num = "Ta bort sökgrupp %%num%%"
 Delete = "Radera"
@@ -487,7 +488,6 @@ fav_export = "Exportera dina favoriter"
 fav_list_delete = "Favoritlistan har raderats."
 fav_list_delete_cancel = "Listan raderades inte."
 fav_list_delete_fail = "Ett fel har uppstått. Listan raderades inte."
-Favorites = "Favoriter"
 Fee = "Avgift"
 Feedback = "Respons"
 Feedback Management = "Feedbackhantering"
@@ -839,7 +839,6 @@ Most Recent Received Issues = "Senast inkomna nummer"
 Multiple Call Numbers = "Flera signum"
 Multiple Locations = "Flera placeringar"
 Musical Score = "Musikalier"
-My Favorites = "Favoriter"
 My Fines = "Avgifter"
 My Holds = "Reserveringar"
 My Profile = "Min profil"
@@ -1506,7 +1505,6 @@ Your Account = "Mitt konto"
 Your book bag is empty = "Din bokkorg är tom"
 Your Checked Out Items = "Lån"
 Your Comment = "Kommentarer"
-Your Favorites = "Favoriter"
 Your Fines = "Avgifter"
 Your Holds and Recalls = "Reserveringar"
 Your Lists = "Listor"
