Add missing text.

--- a/languages/ar.ini
+++ b/languages/ar.ini
@@ -65,6 +65,7 @@ All = "الكل"
 All Fields = "كل الحقول"
 All Pages Loaded = "تم تحميل كل الصفحات"
 All Text = "كل النص"
+all_saved_items = "المفضلة"
 alphabrowse_matches = "النتائج"
 alphabrowselink_html = 'استعرض المداخل حسب %%index%% ابتداءً بـ <a href="%%url%%">%%from%%</a>.'
 Always ask me = "اسألني دائماً"
