--- a/languages/bn.ini
+++ b/languages/bn.ini
@@ -66,6 +66,7 @@ All = "সমস্ত"
 All Fields = "সমস্ত ক্ষেত্রসমূহ"
 All Pages Loaded = "সমস্ত পেজ লোডেড"
 All Text = "সমস্ত পাঠ"
+all_saved_items = "উপাদানটি সংরক্ষন করা হয়েছে"
 alphabrowse_matches = "ফলাফল"
 alphabrowselink_html = '<a href="%%url%%">%%from%%</a> থেকে শুরু করে %%index%% দ্বারা ব্রাউজ করুন।'
 Always ask me = "সব সময় আমাকে জিজ্ঞেস করুন"
