--- a/languages/ca.ini
+++ b/languages/ca.ini
@@ -76,6 +76,7 @@ All = "All"
 All Fields = "Tots els camps"
 All Pages Loaded = "S'han carregat totes les pàgines"
 All Text = "Tot el text"
+all_saved_items = "Favorits"
 alphabrowse_matches = "Resultats"
 alphabrowselink_html = 'Revisar registres per %%index%% desde fins <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Pregunta sempre"
