--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -63,6 +63,7 @@ All = "Vše"
 All Fields = "Vše"
 All Pages Loaded = "Všechny stránky nahrány"
 All Text = "Vše"
+all_saved_items = "Oblíbené"
 alphabrowse_matches = "Výsledky"
 alphabrowselink_html = 'Procházet záznamy podle %%index%% od <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Pokaždé se zeptat"
