--- a/languages/cy.ini
+++ b/languages/cy.ini
@@ -61,6 +61,7 @@ All = "Popeth"
 All Fields = "Pob Maes"
 All Pages Loaded = "Llwythwyd yr holl dudalennau"
 All Text = "Yr holl destun"
+all_saved_items = "Ffefrynnau"
 alphabrowse_matches = "Canlyniadau"
 alphabrowselink_html = "Pori cofnodion ar sail %%index%% gan ddechrau o"
 An error has occurred = "Mae gwall wedi digwydd"
