--- a/languages/da.ini
+++ b/languages/da.ini
@@ -55,6 +55,7 @@ advSearchError_noRights = "Vi beklager, men du har ikke tilladelse til at redige
 advSearchError_notAdvanced = "Den søgning du ønsker at redigere er ikke en udvidet søgning."
 advSearchError_notFound = "Den ønskede søgning blev ikke fundet”"
 All Fields = "Alle Felter"
+all_saved_items = "Favoritter"
 alphabrowse_matches = "Resultater"
 An error has occurred = "Der er sket en fejl"
 AND = "OG"
