--- a/languages/de.ini
+++ b/languages/de.ini
@@ -64,6 +64,7 @@ All = "Alles"
 All Fields = "Alle Felder"
 All Pages Loaded = "Alle Seiten geladen"
 All Text = "Alle Textfelder und Volltext"
+all_saved_items = "Favoriten"
 alphabrowse_matches = "Ergebnis"
 alphabrowselink_html = 'Einträge nach %%index%% ansehen ab <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Immer nachfragen"
