--- a/languages/el.ini
+++ b/languages/el.ini
@@ -65,6 +65,7 @@ All = "Όλα"
 All Fields = "Όλα τα πεδία"
 All Pages Loaded = "Η φόρτωση σελίδων ολοκληρώθηκε"
 All Text = "Οπουδήποτε στο κείμενο"
+all_saved_items = "Αγαπημένα"
 alphabrowse_matches = "Αποτελέσματα"
 alphabrowselink_html = 'Περιήγηση σε %%index%% ξεκινώντας από <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Να γίνεται πάντα ερώτηση"
