--- a/languages/es.ini
+++ b/languages/es.ini
@@ -65,6 +65,7 @@ All = "Todo"
 All Fields = "Todos los Campos"
 All Pages Loaded = "Todas las páginas cargadas"
 All Text = "Todo el Texto"
+all_saved_items = "Favoritos"
 alphabrowse_matches = "Resultados"
 alphabrowselink_html = 'Navegar por las entradas %%index%% iniciando desde <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Siempre pregúntame"
