--- a/languages/eu.ini
+++ b/languages/eu.ini
@@ -680,6 +680,7 @@ All = "Guztiak"
 All Fields = "Eremu guztiak"
 All Pages Loaded = "Orri guztiak kargatuta"
 All Text = "Testu osoa"
+all_saved_items = "Gogokoenak"
 alphabrowse_matches = "Emaitzak"
 alphabrowselink_html = 'Bilatu %%index%% hasiera honekin <a href="%%url%%">%%from%%</a>.'
 An error has occurred = "Errore bat gertatu da"
