--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -63,6 +63,7 @@ All = "Kaikki"
 All Fields = "Kaikki kentät"
 All Pages Loaded = "Kaikki sivut ladattu"
 All Text = "Kaikki teksti"
+all_saved_items = "Suosikit"
 alphabrowse_matches = "Tulokset"
 alphabrowselink_html = 'Selaa %%index%%-indeksiä alkaen kohdasta <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Kysy aina"
