--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -64,6 +64,7 @@ All = "Tout"
 All Fields = "Tous les champs"
 All Pages Loaded = "Toutes les pages chargées"
 All Text = "Tout le texte"
+all_saved_items = "Favoris"
 alphabrowse_matches = "Résultats"
 alphabrowselink_html = 'Parcourir par %%index%% à partir de <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Toujours me demander"
