--- a/languages/ga.ini
+++ b/languages/ga.ini
@@ -64,6 +64,7 @@ All = "Gach ceann"
 All Fields = "Gach réimse"
 All Pages Loaded = "Gach leathanach lódáilte"
 All Text = "Gach téacs"
+all_saved_items = "Ceanáin"
 alphabrowse_matches = "Teidil"
 alphabrowselink_html = 'Brabhsáil iontrálacha de réir %%index%%, <a href="%%url%%">%%from%%</a> ar dtús.'
 Always ask me = "Cuir ceist orm i gcónaí"
