--- a/languages/gl.ini
+++ b/languages/gl.ini
@@ -51,6 +51,7 @@ All = "Todo"
 All Fields = "Todos os campos"
 All Pages Loaded = "Todas as páxinas cargadas"
 All Text = "Todo o texto"
+all_saved_items = "Favoritos"
 alphabrowse_matches = "Resultados"
 alphabrowselink_html = 'Navegar polas entradas %%index%% iniciando desde  <a href="%%url%%">%%from%%</a>.'
 An error has occurred = "Ocorreu un erro"
