--- a/languages/he.ini
+++ b/languages/he.ini
@@ -45,6 +45,7 @@ advSearchError_notAdvanced = "החיפוש שבקשת לערוך אינו חיפ
 advSearchError_notFound = "החיפוש שביקשת לא נמצא"
 All Fields = "כל השדות"
 All Pages Loaded = "כל העמודים נטענו"
+all_saved_items = "מועדפים"
 alphabrowse_matches = "תוצאות"
 An error has occurred = "ארעה שגיאה"
 AND = "וגם"
