--- a/languages/hi.ini
+++ b/languages/hi.ini
@@ -66,6 +66,7 @@ All = "सभी"
 All Fields = "सभी फ़ील्ड्स"
 All Pages Loaded = "सभी पेज लोड किए गए"
 All Text = "पूरा टेक्स्ट"
+all_saved_items = "बची हुई वस्तुएँ"
 alphabrowse_matches = "परिणाम"
 alphabrowselink_html = 'प्रविष्टियों को ब्राउज़ करें %%index%% से शुरू <a href="%%url%%">%%from%%</a>.'
 Always ask me = "हमेशा मुझसे पूछो"
