--- a/languages/hr.ini
+++ b/languages/hr.ini
@@ -65,6 +65,7 @@ All = "Sve"
 All Fields = "Sva polja"
 All Pages Loaded = "Sve stranice učitane"
 All Text = "Sav tekst"
+all_saved_items = "Favoriti"
 alphabrowse_matches = "Rezultati"
 alphabrowselink_html = 'Pregledaj unose prema %%index%%, počevši od <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Uvijek me pitaj"
