--- a/languages/hy.ini
+++ b/languages/hy.ini
@@ -64,6 +64,7 @@ All = "Բոլորը"
 All Fields = "Բոլոր դաշտերը"
 All Pages Loaded = "Բոլոր էջերը բեռնված են"
 All Text = "Ամբողջ տեքստը"
+all_saved_items = "Պահպանված նյութեր"
 alphabrowse_matches = "Արդյունքներ"
 alphabrowselink_html = 'Դիտիր մուտքերը ըստ %%index%% սկսած սրանից <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Միշտ ինձ հարցրու"
