--- a/languages/it.ini
+++ b/languages/it.ini
@@ -64,6 +64,7 @@ All = "All"
 All Fields = "Tutti i Campi"
 All Pages Loaded = "Tutte le pagine caricate"
 All Text = "Tutto il testo"
+all_saved_items = "Elementi salvati"
 alphabrowse_matches = "Risultati"
 alphabrowselink_html = 'Naviga il catalogo per %%index%% partendo da <a href="%%url%%">%%from%%</a>.'
 Always ask me = "chiedimi sempre"
