--- a/languages/ja.ini
+++ b/languages/ja.ini
@@ -65,6 +65,7 @@ All = "すべて"
 All Fields = "全フィールド"
 All Pages Loaded = "全ページロードされました"
 All Text = "すべてのテキスト"
+all_saved_items = "お気に入り"
 alphabrowse_matches = "結果"
 alphabrowselink_html = '%%index%%を<a href="%%url%%">%%from%%</a>からブラウズ'
 Always ask me = "常に確認"
