--- a/languages/mi.ini
+++ b/languages/mi.ini
@@ -37,6 +37,7 @@ All = "Katoa"
 All Fields = "Ngā āpure katoa"
 All Pages Loaded = "Kua utaina ngā whārangi katoa"
 All Text = "Ngā kuputuhi katoa"
+all_saved_items = "Ngā tūemi i tiakina"
 An error has occurred = "Kua puta mai tētahi hapa"
 An error occurred during execution; please try again later. = "Kua hapa te whakahaere; me ngana anō ā muri ake."
 AND = "AND"
