--- a/languages/mn.ini
+++ b/languages/mn.ini
@@ -62,6 +62,7 @@ All = "Бүх"
 All Fields = "Бүх талбарууд"
 All Pages Loaded = "Бүх хуудсыг ачааллаа"
 All Text = "Бүх текст"
+all_saved_items = "Хадгалсан зүйлс"
 alphabrowse_matches = "Үр дүнгүүд"
 alphabrowselink_html = 'Browse entries by %%index%% starting from <a href="%%url%%">%%from%%</a>-с эхэлсэн %%index%%-н оруулсан интернэт хөтчийн оруулгууд.'
 Always ask me = "Үргэлж надаас асуугаарай"
