--- a/languages/nl.ini
+++ b/languages/nl.ini
@@ -62,6 +62,7 @@ All = "Alle"
 All Fields = "Alle velden"
 All Pages Loaded = "Alle pagina's zijn ingeladen"
 All Text = "Alle tekst"
+all_saved_items = "Favorieten"
 alphabrowse_matches = "Resultaten"
 alphabrowselink_html = "Doorblader de catalogus met %%index%% beginnend vanaf %%from%%."
 An error has occurred = "Er is een fout opgetreden"
