--- a/languages/pl.ini
+++ b/languages/pl.ini
@@ -123,6 +123,7 @@ All = "wszystko"
 All Fields = "Wszystkie pola"
 All Pages Loaded = "Wszystkie strony są załadowane."
 All Text = "Cały tekst"
+all_saved_items = "Ulubione książki"
 alphabrowse_matches = "Rezultat"
 alphabrowselink_html = 'Przeglądaj zapisy według %%index%% zaczynając od <a href="%%url%%">%%from%%</a>.'
 An error has occurred = "Wystąpił błąd."
