--- a/languages/pt-br.ini
+++ b/languages/pt-br.ini
@@ -64,6 +64,7 @@ All = "Todos"
 All Fields = "Todos os campos"
 All Pages Loaded = "Todas as páginas carregadas"
 All Text = "TODO Texto"
+all_saved_items = "Itens Guardados"
 alphabrowse_matches = "Resultados"
 alphabrowselink_html = 'Visualizar entradas pelo %%index%% iniciando com <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Sempre me pergunte"
