--- a/languages/pt.ini
+++ b/languages/pt.ini
@@ -50,6 +50,7 @@ All = "Todos"
 All Fields = "Palavra solta"
 All Pages Loaded = "Todas as páginas carregadas"
 All Text = "Todo o Texto"
+all_saved_items = "Favoritos"
 alphabrowse_matches = "Resultados"
 An error has occurred = "Erro na aplicação"
 An error occurred during execution; please try again later. = "Ocorreu um erro durante a execução; por favor, tente novamente mais tarde."
