--- a/languages/ru.ini
+++ b/languages/ru.ini
@@ -81,6 +81,7 @@ All = "Все"
 All Fields = "Все поля"
 All Pages Loaded = "Загружены все страницы"
 All Text = "Весь текст"
+all_saved_items = "Избранное"
 alphabrowse_matches = "Результаты"
 alphabrowselink_html = 'Просмотр записей по индексу %%index%%, начиная с <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Всегда спрашивать меня"
