--- a/languages/se.ini
+++ b/languages/se.ini
@@ -59,6 +59,7 @@ All = "Visot"
 All Fields = "Buot deaivamat"
 All Pages Loaded = "Visot siiddut láddejuvvon"
 All Text = "Visot deaksta"
+all_saved_items = "Oiddohat"
 alphabrowse_matches = "Bohtosat"
 alphabrowselink_html = 'Bláđe %%index%%- indeavssa nu ahte álggát sajis <a href="%%url%%">%%from%%</a>.'
 An error has occurred = "Dáhpáhuvai meattáhus"
