--- a/languages/sl.ini
+++ b/languages/sl.ini
@@ -45,6 +45,7 @@ advSearchError_notFound = "Nismo našli poizvedbe, ki ste jo zahtevali."
 All = "Vse"
 All Fields = "Vsa polja"
 All Pages Loaded = "Vse strani naložene"
+all_saved_items = "Priljubljene"
 alphabrowse_matches = "Rezultati"
 An error has occurred = "Pojavila se je napaka"
 AND = "IN"
