--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -63,6 +63,7 @@ All = "Alla"
 All Fields = "Alla fält"
 All Pages Loaded = "Alla sidor laddade"
 All Text = "All text"
+all_saved_items = "Favoriter"
 alphabrowse_matches = "Resultat"
 alphabrowselink_html = 'Bläddra efter %%index%% från <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Fråga mig alltid"
