--- a/languages/tr.ini
+++ b/languages/tr.ini
@@ -118,6 +118,7 @@ All = "Tümü"
 All Fields = "Tüm Alanlar"
 All Pages Loaded = "Bütün Sayfalar Yüklendi"
 All Text = "Tüm Metin"
+all_saved_items = "Favorilerim"
 alphabrowse_matches = "Sonuçlar"
 alphabrowselink_html = '<a href="%%url%%">%%from%%</a> başlayarak %%index%% tarafından oluşturulan girişleri listeleyin.'
 Always ask me = "Her zaman bana sor"
