--- a/languages/uk.ini
+++ b/languages/uk.ini
@@ -64,6 +64,7 @@ All = "Все"
 All Fields = "Всі поля"
 All Pages Loaded = "Всі завантажені сторінки"
 All Text = "Весь текст"
+all_saved_items = "Збережені ресурси"
 alphabrowse_matches = "Результати"
 alphabrowselink_html = 'Перегляд записів за %%index%%, починаючи з <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Завжди запитувати мене"
