--- a/languages/vi.ini
+++ b/languages/vi.ini
@@ -61,6 +61,7 @@ All = "Tất cả"
 All Fields = "Tất cả các trường"
 All Pages Loaded = "Tải tất cả các trang"
 All Text = "Tất cả văn bản"
+all_saved_items = "Các mục đã lưu"
 alphabrowse_matches = "Kết quả"
 alphabrowselink_html = 'Mục duyệt nhanh bằng %%index%% bắt đầu từ <a href="%%url%%">%%from%%</a>.'
 An error has occurred = "Lỗi đã xảy ra"
