--- a/languages/zh-cn.ini
+++ b/languages/zh-cn.ini
@@ -60,6 +60,7 @@ All = "全部"
 All Fields = "全文检索"
 All Pages Loaded = "所有页面加载"
 All Text = "所有字段"
+all_saved_items = "最爱"
 alphabrowse_matches = "结果"
 An error has occurred = "出现错误"
 An error occurred during execution; please try again later. = "执行过程中发生错误 请稍后再试."
